welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:1: error: type mismatch;
 found   : Int
 required: Boolean
def fizzBuzz(a:Int):String = { if (a%3==0 && a%5==0) {return "Fizz Buzz"} else {if (a%3) {return "Fizz"} else {if (a%5) {return "Buzz"} else {return "a"}}}} 
                                                                                     ^fizzBuzz:1: error: type mismatch;
 found   : Int
 required: Boolean
def fizzBuzz(a:Int):String = { if (a%3==0 && a%5==0) {return "Fizz Buzz"} else {if (a%3) {return "Fizz"} else {if (a%5) {return "Buzz"} else {return "a"}}}} 
                                                                                                                    ^